serve metadata for available locations from datablue
